--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-parallax": "^2.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
   },
